# shopping-behaviour-simulator

./: CMakeLists.txt  README.md  main.cpp
agents/: behavior_model.cpp  behavior_model.h  customer_agent.cpp  customer_agent.h
analytics/: data_logger.cpp  data_logger.h  metrics.cpp  metrics.h
core/: cart_system.cpp  cart_system.h  product_manager.cpp  product_manager.h
dashboard/: app.py
datasets/: generate_mock_events.py  generate_products.py
simulation/: session_runner.cpp  session_runner.h  simulator.cpp  simulator.h
